# shotwellvfs

./: .hgignore  .travis.yml  Cargo.toml  README.md
src/: fuse_interface.rs  main.rs  sqlite_ex.rs
