[package]
name = "shotwellvfs"
description = "Shotwell FUSE adapter"
version = "0.1.0"
authors = ["Vsevolod Velichko <torkvemada@sorokdva.net>"]
keywords = ["fuse", "shotwell", "driver", "fs", "vfs"]
license = "MIT"

[dependencies]
fuse = "0.3"
sqlite = "0.23"
libc = "0.2"
time = "0.1"
log = "0.3"
env_logger = "0.4"
clap = "2.29"
