[package]
name = "shotwellvfs"
version = "0.1.0"
description = "Shotwell FUSE adapter"
authors = ["Vsevolod Velichko <torkvemada@sorokdva.net>"]
keywords = ["fuse", "shotwell", "driver", "fs", "vfs"]
categories = ["filesystem", "multimedia::images", "os::unix-apis"]
license = "MIT"
exclude = [
    "Cargo.toml.orig",
    "**/*.orig",
]
repository = "https://github.com/torkve/shotwellvfs"
readme = "README.md"

[badges]
travis-ci = { repository = "torkve/shotwellvfs", branch = "master" }

[dependencies]
fuse = "0.3"
sqlite = "0.23"
libc = "0.2"
time = "0.1"
log = "0.3"
env_logger = "0.4"
clap = "2.29"
